; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_mapping.c_DRV_USART_LineControlSet.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/usart/src/extr_drv_usart_mapping.c_DRV_USART_LineControlSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV_USART_LINE_CONTROL_SET_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DRV_USART_LineControlSet(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, 255
  %9 = sext i32 %8 to i64
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  switch i64 %10, label %14 [
    i64 128, label %11
  ]

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @DRV_USART0_LineControlSet(i32 %12)
  store i32 %13, i32* %6, align 4
  br label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @DRV_USART_LINE_CONTROL_SET_ERROR, align 4
  store i32 %15, i32* %6, align 4
  br label %16

16:                                               ; preds = %14, %11
  %17 = load i32, i32* %6, align 4
  ret i32 %17
}

declare dso_local i32 @DRV_USART0_LineControlSet(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
